Updated readme to markdown